# CloudHelm

./: .env.example  .gitattributes  .gitignore  AGENTS.md  PROJECT_PLAN.md  PROJECT_PROGRESS.md  README.md  云舵 CloudHelm 毕设设计书.md
examples/sample-repo-python/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/sample-repo-python/demo-issues/: 001-auth-profile.md  demo-issue-001-auth-profile-v1.plan.json
examples/sample-repo-python/src/sample_service/: __init__.py  main.py  schemas.py
examples/sample-repo-python/tests/: test_health.py  test_metrics.py
modules/agent-runtime/: README.md  pyproject.toml
modules/agent-runtime/src/cloudhelm_agent_runtime/: __init__.py  instructions.py
modules/agent-runtime/src/cloudhelm_agent_runtime/agents/: __init__.py  architect_agent.py  coder_agent.py  planner_agent.py  requirement_agent.py  reviewer_agent.py  scaffold_agent.py  security_agent.py  tester_agent.py  tool_agent.py
modules/agent-runtime/src/cloudhelm_agent_runtime/prompts/: __init__.py  architect.md  base.md  coder.md  planner.md  requirement.md  reviewer.md  scaffold.md  security.md  subagent.md  tester.md
modules/agent-runtime/src/cloudhelm_agent_runtime/providers/: __init__.py  base.py  contracts.py  exchange.py  http_client.py  http_streaming.py  local_junit_evidence.py  local_m4_generation.py  local_m4_intent.py  local_m4_sample_auth.py  local_m4_sample_auth_contract.py  local_quality_exchange.py  local_requirement_rules.py  local_review_evidence.py  local_structured.py  local_test_exchange.py  local_tool_evidence.py  local_tool_exchange.py  local_tool_plans.py  local_write_exchange.py  openai_compatible.py  openai_generation.py  openai_provider_support.py  output_schema.py  prompt_cache.py  request_payloads.py  stream_events.py  subagent_notifications.py  tools.py  usage.py
modules/agent-runtime/src/cloudhelm_agent_runtime/schemas/: __init__.py  agent_io.py  design.py  development_plan.py  implementation.py  requirement.py  review_report.py  scaffold.py  security_report.py  test_report.py
modules/agent-runtime/tests/: test_agent_output_validation.py  test_external_prompt_cache.py  test_local_quality_evidence.py  test_m6_tool_agents.py  test_provider_context.py  test_shared_agent_schemas.py
modules/orchestrator/: README.md  pyproject.toml
modules/orchestrator/src/cloudhelm_orchestrator/: __init__.py  local_development_state_machine.py  state_machine.py
modules/orchestrator/src/cloudhelm_orchestrator/services/: __init__.py  agent_result_applier.py  orchestration_service.py  task_context_loader.py
modules/orchestrator/tests/: test_local_development_state_machine.py  test_state_machine.py
modules/platform-api/: README.md  pyproject.toml  remote-target-profiles.example.json  repository-profiles.example.json
modules/platform-api/migrations/: env.py
modules/platform-api/migrations/versions/: 20260708_0001_create_core_m2_tables.py  20260708_0002_create_m4_agent_tables.py  20260708_0003_extend_tool_calls_for_m5.py  20260710_0004_harden_m1_m5.py  20260711_0005_create_agent_conversations.py  20260714_0006_create_m6_local_development.py  20260715_0007_create_m7_environment_remote_target.py  20260716_0008_create_m7_release_jobs.py  20260716_0009_create_m7_ci_deployment_data.py
modules/platform-api/scripts/: generate_openapi.py
modules/platform-api/src/cloudhelm_platform_api/: __init__.py  main.py
modules/platform-api/tests/: conftest.py  m6_evidence_fixture.py  m6_service_fixtures.py  m7_ci_deployment_fixture.py  m7_release_candidate_api_fixture.py  m7_release_job_fixture.py  m7_remote_fixtures.py  m7_repository_binding_fixture.py  test_agent_conversation.py  test_agent_tool_approval_api.py  test_database_migration.py  test_development_plan_api.py  test_error_contract.py  test_event_timeline_api.py  test_external_llm_orchestration.py  test_health.py  test_local_development_workflow_api.py  test_m6_agent_run_lifecycle.py  test_m6_agent_tool_contract.py  test_m6_artifact_pr_api.py  test_m6_artifact_service.py  test_m6_execution_recipe_binding.py  test_m6_foundation_repositories.py  test_m6_foundation_schemas.py  test_m6_foundation_services.py  test_m6_local_development_git_service.py  test_m6_local_development_guards.py  test_m6_local_execution_recipe.py  test_m6_pull_request_concurrency.py  test_m6_shared_contracts.py  test_m7_approval_decisions.py  test_m7_ci_deployment_concurrency.py  test_m7_ci_deployment_constraints.py  test_m7_ci_deployment_contracts.py  test_m7_ci_deployment_hardening.py  test_m7_ci_deployment_migration_roundtrip.py  test_m7_ci_deployment_repositories.py  test_m7_environment_remote_target_api.py  test_m7_machine_auth_heartbeat.py  test_m7_project_repository_binding_api.py  (+17 more)
modules/remote-agent/: README.md  pyproject.toml
modules/remote-agent/src/cloudhelm_remote_agent/: __init__.py  __main__.py  auth.py  cli.py  config.py  credentials.py  exceptions.py  heartbeat.py  main.py  schemas.py
modules/remote-agent/tests/: conftest.py  test_api.py  test_auth.py  test_cli.py  test_config_credentials.py  test_heartbeat.py
modules/tool-gateway/: README.md  pyproject.toml
modules/tool-gateway/src/cloudhelm_tool_gateway/: __init__.py  audit.py  environment.py  gateway.py  policies.py  policy_errors.py  process_runner.py  rate_limit.py  registry.py
modules/tool-gateway/tests/: test_audit.py  test_git_tool.py  test_m6_tools.py  test_policy.py  test_registry.py  test_repo_tool.py  test_sandbox_tool.py
modules/workflow-engine/: README.md  pyproject.toml
modules/workflow-engine/src/cloudhelm_workflow_engine/: __init__.py  __main__.py  broker.py  celery_app.py  cli.py  config.py  database.py  dispatcher.py  errors.py  lease_heartbeat.py  registry.py  schemas.py  stale_reclaimer.py  tasks.py  worker_factory.py  worker_service.py
modules/workflow-engine/tests/: conftest.py  test_celery_app.py  test_claim_and_duplicate.py  test_config.py  test_dispatcher.py  test_redis_restart_requeue.py  test_registry.py  test_schemas.py  test_tasks.py  test_worker_lifecycle.py  test_worker_service.py
(+465 files in other folders)
