[project]
name = "cloudhelm-sample-service"
version = "0.1.0"
description = "CloudHelm M6 本地开发闭环使用的最小 FastAPI 示例服务。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "prometheus-client>=0.22.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
  "bandit>=1.9.0,<2.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pip-audit>=2.9.0,<3.0.0",
  "pytest>=9.0.3,<10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_service"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]
