[project]
name = "cloudhelm-agent-runtime"
version = "0.3.2"
description = "CloudHelm M4 Agent 结构化输出运行时。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.11.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudhelm_agent_runtime"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
