[project]
name = "cloudhelm-platform-api"
version = "0.1.0"
description = "CloudHelm 平台 API 最小 FastAPI 工程。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "uvicorn[standard]>=0.35.0"
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudhelm_platform_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
