[project]
name = "cloudhelm-platform-api"
version = "0.4.1"
description = "CloudHelm 平台 API 数据模型、API、事件、Agent 编排与 M5 Tool Gateway 入口。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.5",
  "cloudhelm-agent-runtime",
  "cloudhelm-orchestrator",
  "cloudhelm-tool-gateway",
  "fastapi>=0.116.0",
  "psycopg[binary]>=3.3.4",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.51",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudhelm_platform_api"]

[tool.uv.sources]
cloudhelm-agent-runtime = { path = "../agent-runtime", editable = true }
cloudhelm-orchestrator = { path = "../orchestrator", editable = true }
cloudhelm-tool-gateway = { path = "../tool-gateway", editable = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
