[project]
name = "cloudhelm-platform-api"
version = "0.5.0"
description = "CloudHelm 平台 API 数据模型、M6 Agent 编排、Artifact 与本地等价 PR 入口。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.5",
  "cloudhelm-agent-runtime",
  "cloudhelm-orchestrator",
  "cloudhelm-tool-gateway",
  "fastapi>=0.116.0",
  "psycopg[binary]>=3.3.4",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.51",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx2>=2.5.0,<3.0.0",
  "jsonschema>=4.26.0,<5.0.0",
  "pyyaml>=6.0.3,<7.0.0",
  "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudhelm_platform_api"]

[tool.uv.sources]
cloudhelm-agent-runtime = { path = "../agent-runtime", editable = true }
cloudhelm-orchestrator = { path = "../orchestrator", editable = true }
cloudhelm-tool-gateway = { path = "../tool-gateway", editable = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
