[project]
name = "cloudhelm-remote-agent"
version = "0.5.1"
description = "CloudHelm Linux staging/demo Remote Agent 的健康检查与签名心跳基础能力。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "httpx2>=2.5.0,<3.0.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[project.scripts]
cloudhelm-remote-agent = "cloudhelm_remote_agent.cli:main"
cloudhelm-remote-heartbeat = "cloudhelm_remote_agent.cli:heartbeat_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudhelm_remote_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
