[project]
name = "cloudhelm-tool-gateway"
version = "0.5.1"
description = "CloudHelm Tool Gateway 受控本地开发工具统一入口。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.11.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudhelm_tool_gateway"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
