[project]
name = "cloudhelm-workflow-engine"
version = "0.5.1"
description = "CloudHelm PostgreSQL 权威的 durable Celery Workflow Engine。"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "celery[redis]==5.6.3",
  "cloudhelm-platform-api",
  "kombu==5.6.2",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "redis==6.4.0",
]

[dependency-groups]
dev = [
  "httpx2>=2.5.0,<3.0.0",
  "jsonschema>=4.26.0,<5.0.0",
  "pytest>=8.4.0",
]

[project.scripts]
cloudhelm-workflow-engine = "cloudhelm_workflow_engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudhelm_workflow_engine"]

[tool.uv.sources]
cloudhelm-platform-api = { path = "../platform-api", editable = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "workflow_integration: 需要真实 WSL PostgreSQL/Redis 的进程级集成测试。",
]
